--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -9,10 +9,7 @@ spring.cloud.stream.kafka.bindings.sleuth.consumer.startOffset=latest
 spring.sleuth.enabled = true
 spring.sampler.percentage=1.0
 
-kafka.bootstrap-servers=131.159.30.173:9092
-kafka.topic.span-info=span-info.t
-
-#spring.datasource.url=jdbc:mysql://localhost/test
-#spring.datasource.username=dbuser
-#spring.datasource.password=dbpass
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/discovery
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
