--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
+server.port=2506
 spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=classpath:config/
 spring.application.name=cep-engine-service
@@ -11,5 +12,5 @@ spring.sampler.percentage=1.0
 
 spring.datasource.url=jdbc:mysql://localhost/discovery
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=sebis
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
